pokemon mobile interaction bug fix

--- a/pokemon-sv-151/src/Canvas.css
+++ b/pokemon-sv-151/src/Canvas.css
@@ -20,6 +20,7 @@
     width: 100% !important;
     height: 100% !important;
     background: transparent !important;
+    touch-action: none !important;
   }
 
   &.c-canvas--dark {
